# agent

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: lint.ps1  lint.sh  test.ps1  test.sh  test_nvidia_nim.py
src/: main.py
src/agent/: __init__.py  core.py  memory.py  tool_interface.py
src/tools/: __init__.py  calculator.py  file_system.py  search.py
tests/: __init__.py  test_memory.py
tests/tools/: __init__.py  test_calculator.py  test_file_system.py  test_search.py
